# netty-tcnative

./: .dockerignore  .gitattributes  .gitignore  Brewfile  NOTICE.txt  README.md  SECURITY.md  build.gradle  new-fork  pom.xml  settings.gradle  vs2010.vcxproj.static.template
.github/scripts/: release_rollback.ps1
.github/workflows/: ci-build.yml  ci-deploy.yml  ci-main.yml  ci-pr.yml  ci-release.yml  ci.yml  codeql-analysis.yml
boringssl-static/: pom.xml
buildSrc/: build.gradle
docker/: Dockerfile-netty-tcnative-centos6  Dockerfile-netty-tcnative-debian7  Dockerfile.al2023  Dockerfile.arch  Dockerfile.centos  Dockerfile.centos6  Dockerfile.cross_compile_aarch64  Dockerfile.debian  Dockerfile.opensuse  README.md  docker-compose.al2023.yaml  docker-compose.arch-18.yaml  docker-compose.arch.yaml  docker-compose.centos-6.18.yaml  docker-compose.centos-6.yaml  docker-compose.centos-7.yaml  docker-compose.centos.yaml  docker-compose.debian-12.18.yaml  docker-compose.debian-7.18.yaml  docker-compose.debian.yaml  docker-compose.opensuse-151.18.yaml  docker-compose.opensuse.yaml  docker-sync-compose.centos-6.18.yaml  docker-sync.centos-6.18.yaml
gradle/wrapper/: gradle-wrapper.properties
libressl-static/: pom.xml
openssl-classes/: pom.xml
openssl-classes/src/main/java/: module-info.yml
openssl-dynamic/: pom.xml
openssl-dynamic/src/main/c/: bb.c  bb.h  cert_compress.c  cert_compress.h  dir.c  error.c  error.h  file.c  io_netty_tcnative_jni_ocsp_Native.c  jnilib.c  lock.c  misc.c  mmap.c  multicast.c  native_constants.c  native_constants.h  os.c  os_unix_system.c  os_win32_registry.c  os_win32_system.c  pool.c  shm.c  ssl.c  ssl.h  ssl_private.h  sslcontext.c  sslcontext.h  sslcredential.c  sslcredential.h  sslsession.c  sslsession.h  sslutils.c  tcn.h  tcn_api.h  tcn_atomic.cpp  (+7 more)
openssl-dynamic/src/main/native-package/: configure.ac  vs2010.vcxproj
openssl-dynamic/src/main/native-package/m4/: custom.m4  tcnative.m4
openssl-static/: pom.xml
patches/: apr_crypt.patch  apr_siglist.patch
release-platforms/alpine/: build.gradle
release-platforms/centos/: build.gradle
scripts/: finish_release.sh
shaded/: pom.xml
src/main/c/: address.c  bb.c  error.c  info.c  jnilib.c  multicast.c  network.c  os_unix_uxpipe.c  os_win32_ntpipe.c  poll.c  proc.c  ssl.c  ssl_private.h  sslcontext.c  sslinfo.c  sslnetwork.c  sslutils.c  stdlib.c  tcn_api.h  tcn_version.h  thread.c  user.c
src/main/native-package/: configure.ac  vs2010.vcxproj
template/: pom.xml
(+82 files in other folders)
